--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BestWritings</title>
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <div class="container">
-
-    </div>
-</body>
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container-fluid bg_main_2">
+        <div class="container">
+          <div class="row">
+            <div class="col-6">
+              <span>Sales toll free: <a href="#">1 (877) 894-0925</a></span>
+              <span>Support toll free: <a href="">1 (888) 901-8317</a></span>
+            </div>
+            <div class="col-6 login">
+              <a href="#">Login <img src="images/Login.svg" alt="login" /></a>
+              <a href="#"
+                >Live Chat <img src="images/Chat.svg" alt="livechat"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid bg_main_1">
+        <div class="container">
+          <div class="row">
+            <div class="col"><a href="#">home</a></div>
+            <div class="col"><a href="#">about us</a></div>
+            <div class="col"><a href="#">prices</a></div>
+            <div class="col"><a href="#">discounts</a></div>
+            <div class="col"><a href="#">guarantees</a></div>
+            <div class="col"><a href="#">FAQ</a></div>
+            <div class="col"><a href="#">beware</a></div>
+            <div class="col"><a href="#">contact us</a></div>
+            <div class="col"><a href="#">blog</a></div>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
