--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>BestWritings</title>
     <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="images/Favicon.png" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -37,6 +38,52 @@
             <div class="col"><a href="#">beware</a></div>
             <div class="col"><a href="#">contact us</a></div>
             <div class="col"><a href="#">blog</a></div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid bg-header">
+        <div class="container banner-text">
+          <div class="row">
+            <div class="col">
+              <img src="images/Logo.svg" alt="" />
+              <div class="h1-div">
+                <h1>Things go Better with Us!</h1>
+              </div>
+              <div class="header-list">
+                <h3>What we offer you:</h3>
+                <ul>
+                  <li>A dedicated writer who is qualified in your field</li>
+                  <li>
+                    Your subject matter analyzed, researched, referenced and
+                    written as you instruct
+                  </li>
+                  <li>
+                    Papers tested for plagiarism using systems such as Copyscape
+                    plus a validation report
+                  </li>
+                  <li>A flawless end product in terms of style and grammar</li>
+                </ul>
+              </div>
+              <div class="header-btn">
+                <div class="row">
+                  <div class="col">
+                    <button type="button">Essays & Research Papers</button>
+                  </div>
+                  <div class="col">
+                    <button type="button">Dissertations & Thesess</button>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <button type="button">Resumes & CVs</button>
+                  </div>
+                  <div class="col">
+                    <button type="button">Editing & Proofreading</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col"></div>
           </div>
         </div>
       </div>
