--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
               <span>Sales toll free: <a href="#">1 (877) 894-0925</a></span>
               <span>Support toll free: <a href="">1 (888) 901-8317</a></span>
             </div>
-            <div class="col-6 login">
-              <a href="#">Login <img src="images/Login.svg" alt="login" /></a>
-              <a href="#"
-                >Live Chat <img src="images/Chat.svg" alt="livechat"
-              /></a>
+            <div class="col-6 login-live">
+              <a href="#" class="login">Login </a>
+              <a href="#" class="live">Live Chat </a>
             </div>
           </div>
         </div>
@@ -30,14 +28,14 @@
         <div class="container">
           <div class="row">
             <div class="col"><a href="#">home</a></div>
-            <div class="col"><a href="#">about us</a></div>
-            <div class="col"><a href="#">prices</a></div>
-            <div class="col"><a href="#">discounts</a></div>
-            <div class="col"><a href="#">guarantees</a></div>
-            <div class="col"><a href="#">FAQ</a></div>
-            <div class="col"><a href="#">beware</a></div>
-            <div class="col"><a href="#">contact us</a></div>
-            <div class="col"><a href="#">blog</a></div>
+            <div class="col border-li"><a href="#">about us</a></div>
+            <div class="col border-li"><a href="#">prices</a></div>
+            <div class="col border-li"><a href="#">discounts</a></div>
+            <div class="col border-li"><a href="#">guarantees</a></div>
+            <div class="col border-li"><a href="#">FAQ</a></div>
+            <div class="col border-li"><a href="#">beware</a></div>
+            <div class="col border-li"><a href="#">contact us</a></div>
+            <div class="col border-li"><a href="#">blog</a></div>
           </div>
         </div>
       </div>
@@ -88,5 +86,46 @@
         </div>
       </div>
     </header>
+
+    <div class="container-fluid section-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="bg-1">
+              <h2>Get a price quote</h2>
+              <p><span>15</span><span>% off</span>your first order</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label for="">title of your paper</label><br />
+            <select name="" id=""></select>
+          </div>
+          <div class="col">
+            <label for="">academic level</label><br />
+            <select name="" id=""></select>
+          </div>
+          <div class="col">
+            <label for="">spacing</label><br />
+            <select name="" id=""></select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label for="">urgency</label><br />
+            <select name="" id=""></select>
+          </div>
+          <div class="col price">
+            <span>total price</span> 
+            <span class="number">16.99</span> 
+            <span>usd</span> 
+          </div>
+          <div class="col">
+            <div>order now</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
